# Hydra

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: request.h  response.h  router.h  server.h
src/: CMakeLists.txt
src/core/: request.c  response.c  router.c  server.c
test/integration/: client.c
